2007-12-13  Jim Sack <jgsack@san.rr.com>
	* src/test/test_util.py
	* src/test/test/test_util_test.py
	add gramps-independent (but compatible) logging to test_util
	to give test modules a really simple setup call.
	also added a simple logfile init and read feature
	for test modules that need to look at log messages

2007-12-12  Brian Matherly <brian@gramps-project.org>
	* src/PluginUtils/__init__.py: Fix MenuToolOptions.

2007-12-12  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/GrampsCfg.py: fixed bug #1305, refresh view after name change

2007-12-12  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_DocReportDialog.py: Added.
	* many, many other files: Refactor various aspects of the report system.
	
2007-12-12  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/GrampsCfg.py: added Translation -> Pattern -> Translation
	so that one can see fully translated text, even if they type in
	English, or %codes
	* src/Utils.py: Fixed two bugs in translations of keywords
	* src/test/utils_test.py: unit tests for keywords/translations

2007-12-11  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/GrampsCfg.py: added keyword and translation functions
	* src/Utils.py: Name Display Editor should work in locale

2007-12-10  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/ViewManager.py: exposed a private method via a new method, 
	  post_load_newdb()
	* src/ArgHandler.py: made ArgHandler.handle_args() return filename,
	  and filetype, if commandline or recentfile
	* src/gramps_main.py: handles return values from AH.handle_args()

2007-12-10  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DbManager.py: fixed issue in breaking lock on lock
	which has already been removed

2007-12-10  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/GrampsCfg.py: Fixed bug in being able to edit the uneditable
	* src/BasicUtils/_NameDisplay.py: Renamed standard name patterns
	  to match new pattern name keywords

2007-12-10 Benny Malengier <benny.malengier@gramps-project.org>